test/integration/basic/src/controller/error/err_302_target.jsx
import React from 'react'
import { Redirect } from '@symph/joy/router'

export default class ERR302 extends React.Component {
  render () {
    return (
      <div>
        <h1>the target page of 302</h1>
      </div>
    )
  }
}
